--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           </ul>
           <h3>Webhook</h3>
           <ul>
-            <li>Requiere de un domínio con certificado SSL</li>
-            <li>Solo se ejecuta cuando Telegram nos envía un mensaje</li>
+            <li>Requiere de un dominio con certificado SSL</li>
+            <li>Sólo se ejecuta cuando Telegram nos envía un mensaje</li>
             <li>Varias posibilidades de escalado</li>
           </ul>
         </section>
@@ -242,12 +242,12 @@ def process_callback(msg):
             <li>Creación de miniaturas al subir imágenes a S3</li>
             <li>API dinámica de una web alojada en S3</li>
             <li>API paralelizable de baja latencia</li>
-            <li>Despliege de aplicación Django o Flask</li>
+            <li>Despliegue de aplicación Django o Flask</li>
           </ul>
         </section>
 
         <section>
-          <h1>Grácias a todos</h1>
+          <h1>Gracias a todos</h1>
           <p>Código disponible en <a href="https://github.com/voodmania/pycones2016-bot">Github</a></p>
         </section>
 			</div>
