--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div class="slides">
 				<section data-background-image="img/ayesa.png" data-background-size="15%" data-background-position="75% 90%">
 					<h1>Móntate tu propio bot por cuatro duros</h1>
-					<h3>AWS Lambda como platarforma para un bot de Telegram</h3>
+					<h3>AWS Lambda como plataforma para un bot de Telegram</h3>
 					<p>
 						<small>Por Alberto Fernández Valiente</small>
 					</p>
